--- a/main.html
+++ b/main.html
@@ -1,1 +1,168 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>zLive Wallpaper App</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body class="font-sans bg-gray-100">
+    <header class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
+        <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
+            <a href="#" class="text-2xl font-bold">zLive Wallpaper</a>
+            <div class="hidden md:flex space-x-4">
+                <a href="#features" class="hover:text-gray-300">Features</a>
+                <a href="#download" class="hover:text-gray-300">Download</a>
+                <a href="#testimonials" class="hover:text-gray-300">Testimonials</a>
+                <a href="#pricing" class="hover:text-gray-300">Pricing</a>
+            </div>
+            <button class="md:hidden focus:outline-none">
+                <i class="fas fa-bars"></i>
+            </button>
+        </nav>
+    </header>
+
+    <main>
+        <section id="hero" class="relative bg-cover bg-center h-screen flex items-center" style="background-image: url('https://images.unsplash.com/photo-1579546929518-9e396f3cc809?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80');">
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+            <div class="container mx-auto px-6 relative z-10 text-center">
+                <h1 class="text-4xl md:text-6xl font-bold text-white mb-4">Transform Your Device with zLive Wallpaper</h1>
+                <p class="text-xl md:text-2xl text-gray-300 mb-8">Bring your screen to life with dynamic, interactive wallpapers</p>
+                <a href="#download" class="bg-white text-purple-600 px-8 py-3 rounded-full font-bold hover:bg-gray-200 transition duration-300">Get Started</a>
+            </div>
+        </section>
+
+        <section id="features" class="py-20 bg-white">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Amazing Features</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
+                    <div class="text-center">
+                        <i class="fas fa-palette text-5xl text-purple-600 mb-4"></i>
+                        <h3 class="text-xl font-semibold mb-2">Customizable Themes</h3>
+                        <p class="text-gray-600">Choose from a wide range of themes or create your own unique wallpaper</p>
+                    </div>
+                    <div class="text-center">
+                        <i class="fas fa-bolt text-5xl text-purple-600 mb-4"></i>
+                        <h3 class="text-xl font-semibold mb-2">Interactive Elements</h3>
+                        <p class="text-gray-600">Engage with your wallpaper through touch and motion controls</p>
+                    </div>
+                    <div class="text-center">
+                        <i class="fas fa-battery-full text-5xl text-purple-600 mb-4"></i>
+                        <h3 class="text-xl font-semibold mb-2">Battery Efficient</h3>
+                        <p class="text-gray-600">Optimized performance to minimize battery consumption</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="download" class="py-20 bg-gray-100">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-3xl font-bold text-gray-800 mb-8">Download zLive Wallpaper</h2>
+                <div class="flex justify-center space-x-4">
+                    <a href="#" class="bg-black text-white px-8 py-3 rounded-full font-bold hover:bg-gray-800 transition duration-300 flex items-center">
+                        <i class="fab fa-apple mr-2"></i> App Store
+                    </a>
+                    <a href="#" class="bg-green-600 text-white px-8 py-3 rounded-full font-bold hover:bg-green-700 transition duration-300 flex items-center">
+                        <i class="fab fa-google-play mr-2"></i> Google Play
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section id="testimonials" class="py-20 bg-white">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">What Our Users Say</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <p class="text-gray-600 mb-4">"zLive Wallpaper has completely transformed my phone's look. I love how interactive and customizable it is!"</p>
+                        <p class="font-semibold">- Sarah M.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <p class="text-gray-600 mb-4">"I'm impressed by how smooth and battery-efficient this app is. Definitely worth the download!"</p>
+                        <p class="font-semibold">- John D.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <p class="text-gray-600 mb-4">"The variety of themes is amazing. I find myself changing my wallpaper almost daily now!"</p>
+                        <p class="font-semibold">- Emily R.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="pricing" class="py-20 bg-gray-100">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Choose Your Plan</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                    <div class="bg-white p-8 rounded-lg shadow-md text-center">
+                        <h3 class="text-2xl font-bold mb-4">Basic</h3>
+                        <p class="text-4xl font-bold mb-6">Free</p>
+                        <ul class="text-gray-600 mb-8">
+                            <li class="mb-2">10 Free Themes</li>
+                            <li class="mb-2">Basic Customization</li>
+                            <li class="mb-2">Ad-Supported</li>
+                        </ul>
+                        <a href="#" class="bg-purple-600 text-white px-6 py-2 rounded-full font-bold hover:bg-purple-700 transition duration-300">Get Started</a>
+                    </div>
+                    <div class="bg-white p-8 rounded-lg shadow-md text-center border-4 border-purple-600">
+                        <h3 class="text-2xl font-bold mb-4">Pro</h3>
+                        <p class="text-4xl font-bold mb-6">$4.99/mo</p>
+                        <ul class="text-gray-600 mb-8">
+                            <li class="mb-2">Unlimited Themes</li>
+                            <li class="mb-2">Advanced Customization</li>
+                            <li class="mb-2">Ad-Free Experience</li>
+                        </ul>
+                        <a href="#" class="bg-purple-600 text-white px-6 py-2 rounded-full font-bold hover:bg-purple-700 transition duration-300">Choose Pro</a>
+                    </div>
+                    <div class="bg-white p-8 rounded-lg shadow-md text-center">
+                        <h3 class="text-2xl font-bold mb-4">Family</h3>
+                        <p class="text-4xl font-bold mb-6">$9.99/mo</p>
+                        <ul class="text-gray-600 mb-8">
+                            <li class="mb-2">Everything in Pro</li>
+                            <li class="mb-2">Up to 5 Devices</li>
+                            <li class="mb-2">Priority Support</li>
+                        </ul>
+                        <a href="#" class="bg-purple-600 text-white px-6 py-2 rounded-full font-bold hover:bg-purple-700 transition duration-300">Choose Family</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="bg-gray-800 text-white py-10">
+        <div class="container mx-auto px-6">
+            <div class="flex flex-wrap justify-between">
+                <div class="w-full md:w-1/4 mb-6 md:mb-0">
+                    <h3 class="text-xl font-bold mb-2">zLive Wallpaper</h3>
+                    <p class="text-gray-400">Transform your device with dynamic, interactive wallpapers.</p>
+                </div>
+                <div class="w-full md:w-1/4 mb-6 md:mb-0">
+                    <h4 class="text-lg font-semibold mb-2">Quick Links</h4>
+                    <ul class="text-gray-400">
+                        <li><a href="#features" class="hover:text-white">Features</a></li>
+                        <li><a href="#download" class="hover:text-white">Download</a></li>
+                        <li><a href="#testimonials" class="hover:text-white">Testimonials</a></li>
+                        <li><a href="#pricing" class="hover:text-white">Pricing</a></li>
+                    </ul>
+                </div>
+                <div class="w-full md:w-1/4 mb-6 md:mb-0">
+                    <h4 class="text-lg font-semibold mb-2">Connect</h4>
+                    <div class="flex space-x-4">
+                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+                <div class="w-full md:w-1/4">
+                    <h4 class="text-lg font-semibold mb-2">Contact Us</h4>
+                    <p class="text-gray-400">support@zlivewallpaper.com</p>
+                </div>
+            </div>
+            <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400">
+                <p>&copy; 2023 zLive Wallpaper. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
